--- a/components/heroSection/heroSection.module.scss
+++ b/components/heroSection/heroSection.module.scss
@@ -28,7 +28,8 @@
     .hero_title {
         font-weight: 700;
         color: var(--primary-color);
-        font-family: Poppins-Regular;
+        // font-family: Poppins-Regular;
+        font-family: var(--font-poppins);
         font-size: 2.5rem;
         max-width: 600px;
 
@@ -79,6 +80,7 @@
         padding: 0.8rem 2.5rem;
         color: var(--white);
         border-radius: 2rem;
+        font-family: var(--font-poppins);
     }
 
     .small_text {
@@ -196,6 +198,19 @@
     .hero_right {
         .hero_image {
             transform: translate(0, 3rem);
+        }
+    }
+}
+@media (max-width: 700px) {
+    .hero_left{
+        .hero_title{
+            text-align: center;
+            max-width: 100%;
+        }
+        .btn_container{
+            width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
