--- a/components/shared/SectionHeading/sectionHeading.module.scss
+++ b/components/shared/SectionHeading/sectionHeading.module.scss
@@ -2,5 +2,6 @@
     font-weight: 700;
     text-align: center;
     color: var(--primary-color);
-    font-family: Poppins-Regular;
+    // font-family: Poppins-Regular;
+    font-family: var(--font-poppins);
 }
