--- a/components/howItWorks/howItWorks.module.scss
+++ b/components/howItWorks/howItWorks.module.scss
@@ -162,6 +162,11 @@
         &:nth-child(2)>svg {
             display: inline-block;
         }
+        &:first-child{
+            .card_img_container{
+                max-width: 70%;
+            }
+        }
     }
 }
 @media (max-width: 250px) {
@@ -169,6 +174,11 @@
     .card {
         .card_img_container{
             max-width: initial;
+        }
+        &:first-child{
+            .card_img_container{
+                max-width: 80%;
+            }
         }
     }
 }
