--- a/components/howItWorks/howItWorks.module.scss
+++ b/components/howItWorks/howItWorks.module.scss
@@ -102,49 +102,49 @@
     }
 }
 
+// @media (max-width: 900px) {
+//     .cards {
+//         grid-template-columns: 1fr 1fr;
+//         column-gap: 5rem;
+//         row-gap: 4rem;
+//     }
+
+//     .card {
+//         >svg {
+//             right: -2.5rem;
+//         }
+
+//         &:nth-child(2)>svg {
+//             display: none;
+//         }
+//     }
+// }
+
+// @media (max-width: 670px) {
+//     .cards {
+//         gap: 3rem;
+//     }
+
+//     .card {
+//         >svg {
+//             right: -1.5rem;
+//         }
+//     }
+// }
+
+// @media (max-width: 500px) {
+//     .cards {
+//         gap: 2rem;
+//     }
+
+//     .card {
+//         >svg {
+//             right: -1rem;
+//         }
+//     }
+// }
+
 @media (max-width: 900px) {
-    .cards {
-        grid-template-columns: 1fr 1fr;
-        column-gap: 5rem;
-        row-gap: 4rem;
-    }
-
-    .card {
-        >svg {
-            right: -2.5rem;
-        }
-
-        &:nth-child(2)>svg {
-            display: none;
-        }
-    }
-}
-
-@media (max-width: 670px) {
-    .cards {
-        gap: 3rem;
-    }
-
-    .card {
-        >svg {
-            right: -1.5rem;
-        }
-    }
-}
-
-@media (max-width: 500px) {
-    .cards {
-        gap: 2rem;
-    }
-
-    .card {
-        >svg {
-            right: -1rem;
-        }
-    }
-}
-
-@media (max-width: 400px) {
     .how_works_container {
         margin-top: 3rem;
     }
@@ -155,9 +155,14 @@
     }
 
     .card {
-        .card_img_container {
-            max-width: 80%;
-        }
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+
+        // .card_img_container {
+        //     max-width: 80%;
+        //     border: 2px solid blue;
+        // }
 
         >svg {
             // transform: rotate(90deg);
@@ -168,13 +173,31 @@
             transform: translate(-50%, 50%) rotate(90deg);
         }
 
-        &:nth-child(2)>svg {
-            display: inline-block;
+        &:nth-child(2) {
+            max-width: 100%;
+            >svg {
+                display: inline-block;
+            }
         }
 
-        &:first-child {
+        &:first-child,
+        &:nth-child(3),
+        &:nth-child(4) {
             .card_img_container {
                 max-width: 70%;
+            }
+        }
+    }
+}
+@media (max-width: 400px) {
+
+    .card {
+
+        &:first-child,
+        &:nth-child(3),
+        &:nth-child(4) {
+            .card_img_container {
+                max-width: 80%;
             }
         }
     }
