--- a/components/mapSection/mapSection.module.scss
+++ b/components/mapSection/mapSection.module.scss
@@ -1,7 +1,3 @@
-.map_container {
-    // border: 4px solid red;
-    margin-bottom: 5rem;
-}
 
 .heading_wrapper {
     width: 90%;
@@ -11,30 +7,21 @@
 }
 
 .map_images {
-    border: 4px solid red;
     position: relative;
 }
 
 .card_img_container {
     width: 100%;
     height: 540px;
-    // max-width: 80rem;
-    // margin-left: auto;
-    // margin-right: auto;
-    // border: 4px solid blue;
     position: relative;
     overflow: hidden;
     z-index: -99;
 
     >img {
-        // border: 2px solid red;
         position: absolute;
         top: 0;
         right: 0;
-        // transform: translateX(14.5%);
         width: 100%;
-        // height: ;
-        // object-fit: cover;
     }
 }
 
@@ -42,7 +29,8 @@
     position: absolute;
     border: 4px solid #005F31;
     border-radius: 100%;
-    &::after{
+
+    &::after {
         content: '';
         width: 14px;
         height: 14px;
@@ -53,41 +41,362 @@
         transform: translate(-50%, 100%);
         clip-path: polygon(50% 100%, 6.7% 25%, 93.3% 25%);
     }
-    >img{
+
+    >img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 100%;
     }
 }
-.location.map1{
+
+.location.map1 {
     top: 0.8rem;
     left: 47.5%;
     transform: translateX(-50%);
     width: 110px;
     height: 110px;
 }
-.location.map2{
+
+.location.map2 {
     top: 7.7rem;
     left: 33.1%;
     transform: translateX(-50%);
     width: 95px;
     height: 95px;
 }
+.location.map3 {
+    bottom: 5rem;
+    left: 52%;
+    width: 95px;
+    height: 95px;
+}
 
-.tooltip{
+@media (min-width: 1350px) {
+    .location.map2 {
+        left: 33.5%;
+    }
+}
+@media (min-width: 1450px) {
+    .location.map2 {
+        left: 35%;
+    }
+}
+@media (min-width: 1550px) {
+    .location.map2 {
+        top: 8rem;
+        left: 36%;
+    }
+}
+@media (min-width: 1650px) {
+
+    .location.map2 {
+        left: 37%;
+    }
+}
+@media (min-width: 1700px) {
+    .location.map2 {
+        left: 36.7%;
+    }
+}
+@media (min-width: 1750px) {
+    .location.map2 {
+        left: 37.5%;
+    }
+    .location.map3 {
+        left: 51%;
+    }
+}
+@media (min-width: 1850px) {
+
+    .location.map2 {
+        left: 39%;
+    }
+}
+@media (min-width: 1950px) {
+    .location.map2 {
+        left: 39%;
+    }
+}
+@media (min-width: 2050px) {
+    .location.map2 {
+        left: 41.5%;
+    }
+    .location.map3 {
+        left: 50.2%;
+    }
+}
+@media (min-width: 3000px) {
+    .location.map2 {
+        left: 44.5%;
+    }
+}
+@media (min-width: 5000px) {
+
+    .location.map2 {
+        left: 46%;
+    }
+}
+@media (max-width: 1300px) {
+    .location.map1 {
+        left: 46%;
+    }
+
+    .location.map2 {
+        left: 32%;
+    }
+}
+@media (max-width: 1200px) {
+    .location.map1 {
+        left: 45%;
+    }
+
+    .location.map2 {
+        left: 30%;
+    }
+}
+@media (max-width: 1100px) {
+    .location.map1 {
+        left: 44%;
+    }
+
+    .location.map2 {
+        left: 29%;
+    }
+}
+@media (max-width: 1000px) {
+    .location.map2 {
+        left: 26%;
+    }
+}
+@media (max-width: 900px) {
+    .location.map2 {
+        left: 24%;
+    }
+}
+@media (max-width: 820px) {
+    .location.map2 {
+        left: 22%;
+    }
+}
+@media (max-width: 780px) {
+    .location.map2 {
+        left: 20%;
+    }
+}
+@media (max-width: 720px) {
+    .location.map1 {
+        left: 42%;
+    }
+    .location.map2 {
+        left: 17%;
+    }
+}
+@media (max-width: 660px) {
+    .location.map2 {
+        left: 14%;
+    }
+    .location.map3 {
+        // bottom: 5rem;
+        left: 53%;
+    }
+}
+@media (max-width: 620px) {
+    .location.map1 {
+        left: 40%;
+    }
+    .location.map2 {
+        left: 12%;
+    }
+}
+@media (max-width: 600px) {
+    .location.map1 {
+        top: 1.5rem;
+    }
+    
+    .location.map2 {
+        top: 8.5rem;
+    }
+}
+@media (max-width: 550px) {
+    .location.map1 {
+        top: 2.5rem;
+    }
+    
+    .location.map2 {
+        top: 9.5rem;
+    }
+    .location.map3 {
+        bottom: 5.5rem;
+        // left: 53%;
+    }
+}
+@media (max-width: 500px) {
+    .location.map1 {
+        top: 3.5rem;
+    }
+    
+    .location.map2 {
+        top: 10rem;
+    }
+    .location.map3 {
+        bottom: 6rem;
+        left: 51%;
+    }
+}
+@media (max-width: 450px) {
+    .location.map1 {
+        top: 4.5rem;
+    }
+    
+    .location.map2 {
+        top: 10.5rem;
+    }
+    .location.map3 {
+        bottom: 6.5rem;
+        left: 50%;
+    }
+}
+@media (max-width: 420px) {
+    .heading_wrapper{
+        margin-bottom: 0;
+    }
+    .location.map1 {
+        top: 6rem;
+        width: 90px;
+        height: 90px;
+    }
+    
+    .location.map2 {
+        top: 12rem;
+        width: 75px;
+        height: 75px;
+    }
+    .location.map3 {
+        bottom: 7rem;
+        left: 51%;
+        width: 75px;
+        height: 75px;
+    }
+}
+@media (max-width: 390px) {
+    .heading_wrapper{
+        margin-bottom: -3rem;
+    }
+    .location.map1 {
+        top: 8rem;
+        width: 80px;
+        height: 80px;
+    }
+    .location{
+        &::after {
+            width: 10px;
+            height: 10px;
+        }
+    }
+    .location.map2 {
+        top: 13rem;
+        width: 65px;
+        height: 65px;
+    }
+    .location.map3 {
+        bottom: 7.5rem;
+        left: 52%;
+        width: 65px;
+        height: 65px;
+    }
+}
+@media (max-width: 340px) {
+    .heading_wrapper{
+        margin-bottom: -5rem;
+    }
+    .card_img_container{
+        height: 500px;
+    }
+    .location.map1 {
+        top: 9.5rem;
+        width: 70px;
+        height: 70px;
+    }
+    
+    .location.map2 {
+        top: 14rem;
+        width: 55px;
+        height: 55px;
+    }
+    .location.map3 {
+        bottom: 5.5rem;
+        // left: 52%;
+        width: 55px;
+        height: 55px;
+    }
+}
+@media (max-width: 310px) {
+    .heading_wrapper{
+        margin-bottom: -6rem;
+    }
+    .location.map1 {
+        top: 10rem;
+    }
+    
+    .location.map2 {
+        top: 15rem;
+    }
+    .location.map3 {
+        bottom: 6rem;
+        // left: 52%;
+        // width: 55px;
+        // height: 55px;
+    }
+}
+@media (max-width: 290px) {
+    .heading_wrapper{
+        margin-bottom: -7rem;
+    }
+    .location.map1 {
+        top: 10.5rem;
+    }
+    
+    .location.map2 {
+        top: 15.3rem;
+    }
+    .location.map3 {
+        bottom: 6.2rem;
+        left: 51%;
+        // width: 55px;
+        // height: 55px;
+    }
+}
+@media (max-width: 260px) {
+    .heading_wrapper{
+        margin-bottom: -8rem;
+    }
+    .location.map1 {
+        top: 11rem;
+    }
+    
+    .location.map2 {
+        top: 15.3rem;
+    }
+}
+
+.tooltip {
     background: white !important;
     border-radius: 10px !important;
     box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.03) !important;
     opacity: 1 !important;
+    z-index: 99;
 }
-.tooltip_content{
+
+.tooltip_content {
     width: 230px;
+
     // padding: 0.5rem;
-    .title{
+    .title {
         color: var(--primary-color);
     }
-    .descrption{
+
+    .descrption {
         color: var(--text-primary);
         font-size: 11px;
     }
