--- a/components/testimonials/slides/slides.module.scss
+++ b/components/testimonials/slides/slides.module.scss
@@ -24,6 +24,7 @@
         -webkit-box-orient: vertical;
         text-overflow: ellipsis;
         margin-top: 3rem;
+        font-weight: 500;
     }
 
     .name {
