--- a/components/heroSection/heroSection.module.scss
+++ b/components/heroSection/heroSection.module.scss
@@ -4,7 +4,7 @@
 
 .hero_bg {
     width: 100%;
-    height: 600px;
+    height: 700px;
     position: absolute;
     top: 0;
     left: 0;
@@ -15,23 +15,28 @@
         height: 100%;
     }
 }
+
 .hero {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3rem;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+    // gap: 3rem;
+    display: flex;
+    gap: 2rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
 
 .hero_left {
+    width: 60%;
 
     .hero_title {
         font-weight: 700;
         color: var(--primary-color);
         // font-family: Poppins-Regular;
         font-family: var(--font-poppins);
-        font-size: 2.5rem;
-        max-width: 600px;
+        font-size: 3.4rem;
+        // max-width: 600px;
+        line-height: 1.2;
 
         @media (max-width: 1250px) {
             >br {
@@ -52,10 +57,10 @@
             gap: 1rem;
 
             .check_icon {
-                width: 18px;
-                min-width: 18px;
-                min-height: 18px;
-                height: 18px;
+                width: 30px;
+                min-width: 30px;
+                min-height: 30px;
+                height: 30px;
                 background: var(--primary-color);
                 border-radius: 100%;
                 display: flex;
@@ -63,14 +68,15 @@
                 justify-content: center;
 
                 >svg {
-                    width: 12px;
-                    height: 12px;
+                    width: 20px;
+                    height: 20px;
                     color: var(--white);
                 }
             }
 
             .benefit {
                 color: var(--text-primary);
+                font-size: 20px;
             }
         }
     }
@@ -94,14 +100,15 @@
 }
 
 .hero_right {
+    width: 40%;
     display: flex;
     justify-content: flex-end;
     position: relative;
 
     .hero_image {
         position: absolute;
-        top: 3.5rem;
-        left: -5rem;
+        top: 29%;
+        left: -57%;
     }
 
     .video_wrapper {
@@ -128,11 +135,15 @@
         }
     }
 
+    .video_text2 {
+        display: none;
+    }
+
     .video {
-        width: 200px;
-        min-width: 200px;
-        height: 120px;
-        border: 4px solid white;
+        width: 350px;
+        // min-width: 200px;
+        height: 200px;
+        border: 10px solid white;
         border-radius: 5px;
         cursor: pointer;
         position: relative;
@@ -161,106 +172,276 @@
     }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
+    .hero_left {
+        width: 70%;
+
+        .hero_title {
+            padding-right: 2rem;
+        }
+    }
+
+    .hero_right {
+        width: 30%;
+
+        .hero_image {
+            top: 33%;
+            left: -100%;
+        }
+
+        // .video_wrapper{
+        //     border: 2px solid red;
+        //     margin-top: 6rem;
+        // }
+        .video {
+            width: 290px;
+            height: 170px;
+        }
+    }
+}
+
+@media (max-width: 1000px) {
     .hero {
-        grid-template-columns: 1fr;
+        position: relative;
+        margin-bottom: 20rem;
     }
 
     .hero_left {
-        .hero_title {
-            font-size: 2rem;
-        }
+        width: 100%;
     }
 
     .hero_right {
+        width: 100%;
+        position: absolute;
+        top: 52%;
+        right: 0;
+
         .hero_image {
-            position: static;
-            transform: translate(-5rem, 3rem);
-            width: 100%;
-            max-width: 400px;
+            position: initial;
+            margin-top: 10rem;
+        }
 
-            .image_container {
-                position: relative;
-                padding-top: calc(300 / 300 * 100%);
+        .video {
+            width: 270px;
+            // min-width: 200px;
+            height: 160px;
+        }
+    }
+}
 
-                >img {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
+@media (max-width: 900px) {
+    .hero_right {
+        .hero_image {
+            margin-right: -3rem;
+        }
+
+        .video {
+            width: 220px;
+            // min-width: 200px;
+            height: 120px;
+            border-radius: 5px;
+        }
+    }
+}
+
+@media (max-width: 850px) {
+    .hero {
+        flex-direction: column;
+        gap: 3.5rem;
+        margin-bottom: 0;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    .hero_left {
+        width: 100%;
+
+        .hero_title {
+            padding-right: 0;
+            text-align: center;
+            font-size: 2.5rem;
+        }
+
+        .benefits {
+            width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 2.5rem;
+
+            >div {
+                .check_icon {
+                    width: 20px;
+                    min-width: 20px;
+                    min-height: 20px;
+                    height: 20px;
+
+                    >svg {
+                        width: 12px;
+                        height: 12px;
+                    }
                 }
 
+                .benefit {
+                    color: var(--text-primary);
+                    font-size: 20px;
+                }
             }
         }
-    }
-}
 
-@media (max-width: 800px) {
-    .hero_right {
-        .hero_image {
-            transform: translate(0, 3rem);
-        }
-    }
-}
-@media (max-width: 700px) {
-    .hero_left{
-        .hero_title{
-            text-align: center;
-            max-width: 100%;
-        }
-        .btn_container{
+        .btn_container {
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
             text-align: center;
         }
-        .benefits{
-            width: fit-content;
-            margin: 2rem auto;
-        }
-    }
-}
-
-@media (max-width: 550px) {
-    .hero_bg {
-        height: 500px;
-    }
-
-    .hero {
-        padding-top: 3rem;
     }
 
     .hero_right {
+        position: initial;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .video_wrapper {
+            order: 1;
+        }
+
         .video {
-            width: 150px;
-            min-width: 150px;
-            height: 90px;
+            width: 70px;
+            height: 70px;
+            background: var(--primary-color);
+            border: none;
+            box-shadow: none;
+            border-radius: 100%;
+
+            >img {
+                display: none;
+            }
 
             >svg {
                 width: 30px;
                 height: 30px;
             }
         }
-    }
 
-    .hero_left {
-        .hero_title {
-            font-size: 1.8rem;
+        .hero_image {
+            position: initial;
+            order: 2;
+            margin-top: 0;
+            margin-right: 0;
         }
     }
 }
 
-@media (max-width: 400px) {
-    .hero_bg {
-        height: 400px;
-    }
-
+@media (max-width: 600px) {
     .hero_left {
         .hero_title {
-            font-size: 1.6rem;
+            font-size: 2rem;
+        }
+    }
+}
+
+@media (max-width: 420px) {
+    .hero_left {
+        .hero_title {
+            font-size: 2rem;
+        }
+        .benefits {
+            >div {
+                .benefit {
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+
+    .hero_right {
+        .hero_image {
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+
+            .image_container {
+                width: 100%;
+                height: auto;
+
+                >img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 360px) {
+    .hero {
+        gap: 1.5rem;
+    }
+
+    .video_wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem;
+
+        .video_text2 {
+            display: flex;
+        }
+    }
+
+    .video_wrapper_left {
+        position: relative;
+
+        >img {
+            display: none;
         }
 
+        .video_text1 {
+            display: none;
+        }
+    }
+}
+
+// @media (max-width: 1200px) {
+//     .hero {
+//         grid-template-columns: 1fr;
+//     }
+
+//     // .hero_left {
+//     //     .hero_title {
+//     //         font-size: 2rem;
+//     //     }
+//     // }
+
+//     .hero_right {
+//         .hero_image {
+//             position: static;
+//             transform: translate(-5rem, 3rem);
+//             width: 100%;
+//             max-width: 400px;
+
+//             .image_container {
+//                 position: relative;
+//                 padding-top: calc(300 / 300 * 100%);
+
+//                 >img {
+//                     position: absolute;
+//                     top: 0;
+//                     left: 0;
+//                     width: 100%;
+//                     height: 100%;
+//                 }
+
+//             }
+//         }
+//     }
+// }
+
+@media (max-width: 800px) {
+    .hero_left {
         .hero_btn {
             font-size: 14px;
             padding: 0.7rem 2rem;
@@ -268,47 +449,130 @@
     }
 
     .hero_right {
-        .video {
-            width: 120px;
-            min-width: 120px;
-            height: 70px;
+        .hero_image {
+            transform: translate(0, 3rem);
         }
     }
 }
 
 @media (max-width: 350px) {
-    .hero {
-        padding-top: 2rem;
-    }
-
     .hero_left {
-        .hero_title {
-            font-size: 1.5rem;
-        }
-
         .hero_btn {
             font-size: 12px;
             padding: 0.6rem 1.3rem;
             border-radius: 1.5rem;
         }
     }
-
-    .hero_right {
-        .video_wrapper_left {
-            .video_text {
-                font-size: 12px;
-            }
-        }
-
-        .video {
-            width: 90px;
-            min-width: 90px;
-            height: 55px;
-
-            >svg {
-                width: 20px;
-                height: 20px;
-            }
-        }
-    }
 }
+
+// @media (max-width: 700px) {
+//     .hero_left {
+//         .hero_title {
+//             text-align: center;
+//             max-width: 100%;
+//         }
+
+//         .btn_container {
+//             width: fit-content;
+//             margin-left: auto;
+//             margin-right: auto;
+//             text-align: center;
+//         }
+
+//         .benefits {
+//             width: fit-content;
+//             margin: 2rem auto;
+//         }
+//     }
+// }
+
+// @media (max-width: 550px) {
+//     .hero_bg {
+//         height: 500px;
+//     }
+
+//     .hero {
+//         padding-top: 3rem;
+//     }
+
+//     .hero_right {
+//         .video {
+//             width: 150px;
+//             min-width: 150px;
+//             height: 90px;
+
+//             >svg {
+//                 width: 30px;
+//                 height: 30px;
+//             }
+//         }
+//     }
+
+//     .hero_left {
+//         .hero_title {
+//             font-size: 1.8rem;
+//         }
+//     }
+// }
+
+// @media (max-width: 400px) {
+//     .hero_bg {
+//         height: 400px;
+//     }
+
+//     .hero_left {
+//         .hero_title {
+//             font-size: 1.6rem;
+//         }
+
+//         .hero_btn {
+//             font-size: 14px;
+//             padding: 0.7rem 2rem;
+//         }
+//     }
+
+//     .hero_right {
+//         .video {
+//             width: 120px;
+//             min-width: 120px;
+//             height: 70px;
+//         }
+//     }
+// }
+
+// @media (max-width: 350px) {
+//     .hero {
+//         padding-top: 2rem;
+//     }
+
+//     .hero_left {
+//         .hero_title {
+//             font-size: 1.5rem;
+//         }
+
+//         .hero_btn {
+//             font-size: 12px;
+//             padding: 0.6rem 1.3rem;
+//             border-radius: 1.5rem;
+//         }
+//     }
+
+//     .hero_right {
+//         .video_wrapper_left {
+//             .video_text {
+//                 font-size: 12px;
+//             }
+//         }
+
+//         .video {
+//             width: 90px;
+//             min-width: 90px;
+//             height: 55px;
+
+//             >svg {
+//                 width: 20px;
+//                 height: 20px;
+//             }
+//         }
+//     }
+// }
