--- a/components/testimonials/testimonials.module.scss
+++ b/components/testimonials/testimonials.module.scss
@@ -64,16 +64,9 @@
         font-family: var(--font-poppins);
     }
 
-    .card_description1 {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
+    .card_description {
         color: var(--text-primary);
-    }
-
-    .card_description2 {
-        display: none;
-        color: var(--text-primary);
+        font-size: 20px;
     }
 }
 
@@ -150,6 +143,10 @@
         .card_img_container {
             width: 90px;
             height: 90px;
+        }
+
+        .card_description {
+            font-size: initial;
         }
     }
 }
