--- a/components/howItWorks/howItWorks.module.scss
+++ b/components/howItWorks/howItWorks.module.scss
@@ -27,6 +27,8 @@
         position: relative;
         overflow: hidden;
         padding-top: calc(70 / 105 * 100%);
+        max-height: 150px;
+        // border: 2px solid red;
     }
 
     .card_img {
@@ -64,7 +66,7 @@
         height: 30px;
         position: absolute;
         right: -1rem;
-        top: 35%;
+        top: 30%;
         // transform: translate(-50%, -50%);
         transform: translate(50%, -50%);
     }
@@ -82,6 +84,23 @@
     .card {
         .card_title {
             white-space: initial;
+        }
+
+        >svg {
+            right: -1.5rem;
+            top: 25%;
+        }
+    }
+}
+
+@media (max-width: 1170px) {
+    .cards {
+        gap: 3rem;
+    }
+
+    .card {
+        .card_img_container {
+            max-height: 100px;
         }
 
         >svg {
@@ -176,6 +195,7 @@
 
         &:nth-child(2) {
             max-width: 100%;
+
             >svg {
                 display: inline-block;
             }
@@ -190,6 +210,7 @@
         }
     }
 }
+
 @media (max-width: 400px) {
 
     .card {
