--- a/components/shared/Footer/Footer.module.scss
+++ b/components/shared/Footer/Footer.module.scss
@@ -41,7 +41,7 @@
 .company_info {
     >p {
         margin-top: 1rem;
-        font-size: 14px;
+        font-size: 1rem;
         line-height: 1.7;
         color: var(--white);
         max-width: 250px;
@@ -64,7 +64,7 @@
 
 .logo {
     color: var(--white);
-
+    font-size: 1.2rem;
     >img {
         width: 100px;
         height: auto;
