--- a/components/aboutUs/aboutUs.module.scss
+++ b/components/aboutUs/aboutUs.module.scss
@@ -70,8 +70,17 @@
     width: 100%;
     height: auto;
     text-align: center;
-    box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
     border-radius: 10px;
+    >video{
+        // border: 2px solid red !important;
+        border-radius: 10px;
+    }
+}
+.loader{
+    border: 2px solid red;
+    width: 100%;
+    height: 500px;
 }
 
 .about_text_wrapper {
