--- a/components/heroSection/heroSection.module.scss
+++ b/components/heroSection/heroSection.module.scss
@@ -109,6 +109,7 @@
         position: absolute;
         top: 29%;
         left: -57%;
+        // border: 2px solid red;
     }
 
     .video_wrapper {
@@ -330,6 +331,8 @@
             order: 2;
             margin-top: 0;
             margin-right: 0;
+            // transform: translateX(-50px);
+            margin-left: -40px;
         }
     }
 }
@@ -365,6 +368,7 @@
             .image_container {
                 width: 100%;
                 height: auto;
+                margin-left: -20px;
 
                 >img {
                     width: 100%;
