--- a/components/shared/navbar/MobileSidebar/MobileSidebar.module.scss
+++ b/components/shared/navbar/MobileSidebar/MobileSidebar.module.scss
@@ -9,11 +9,9 @@
     transition: left 0.5s ease, opacity 0.5s ease, box-shadow 0.5s ease;
     opacity: 0;
     overflow: hidden;
-    padding: 1.3rem;
-    padding-top: 0.7rem;
-    @media (max-width: 350px) {
-        width: 70%;
-    }
+    // padding: 1.3rem;
+    // padding-top: 0.7rem;
+    padding-top: 0;
 }
 
 .sidebar.open_sidebar {
@@ -22,10 +20,26 @@
     box-shadow: -2px 0 8px 4px rgba(0, 0, 0, 0.1);
 }
 
+.close_icon_wrapper {
+    height: 80px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    // border: 2px solid red;
+
+    // @media (max-width: 400px) {
+    //     height: 60px;
+    //     padding-left: 0;
+    // }
+}
+
 .close_icon {
-    width: 35px;
-    height: 35px;
-    font-size: 30px;
+    // width: 45px;
+    // height: 45px;
+    // font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,30 +47,69 @@
     cursor: pointer;
     transition: all 0.3s;
 
+    // border: 2px solid blue;
+    >svg {
+        width: 45px;
+        height: 45px;
+    }
+
     &:hover {
         background: rgb(250, 250, 250);
     }
 }
 
 .mobile_navlinks {
-    margin-top: 1.5rem;
+    // width: 90%;
+    // margin-left: auto;
+    // margin-right: auto;
+    // margin-top: 1.5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    // gap: 0.5rem;
 
     .navlink {
-        padding: 0.7rem;
-        border-radius: 8px;
+        // padding: 0.7rem;
+        padding: 1.4rem 2rem;
+        // border-radius: 8px;
+        color: var(--black);
+        font-size: 1rem;
+        font-weight: 600;
+        border-bottom: 1px solid #F0F4DC;
         transition: all 0.3s;
-        color: var(--text-primary);
 
         &:hover {
             background: rgb(250, 250, 250);
+        }
+
+        &:first-child {
+            border-top: 1px solid #F0F4DC;
         }
     }
 
     .navlink.active {
         background: rgb(243, 243, 243);
         color: var(--secondary-color);
+    }
+}
+
+@media (max-width: 400px) {
+    .sidebar {
+        left: -100%;
+        width: 100%;
+    }
+    .close_icon_wrapper{
+        padding-left: 0;
+    }
+    .close_icon {
+        >svg {
+            width: 40px;
+            height: 40px;
+        }
+    }
+
+    .mobile_navlinks {
+        .navlink {
+            padding: 1.4rem 1.8rem;
+        }
     }
 }
