--- a/components/shared/SectionHeading/sectionHeading.module.scss
+++ b/components/shared/SectionHeading/sectionHeading.module.scss
@@ -1,7 +1,7 @@
 .heading {
     font-weight: 700;
     text-align: center;
-    color: var(--primary-color);
+    color: var(--color-primary);
     // font-family: Poppins-Regular;
     font-family: var(--font-poppins);
     @media (max-width: 400px) {
