--- a/components/shared/getOffers/getOffers.module.scss
+++ b/components/shared/getOffers/getOffers.module.scss
@@ -34,7 +34,7 @@
     .title {
         font-weight: 600;
         text-align: center;
-        color: var(--primary-color);
+        color: var(--color-primary);
         font-family: var(--font-poppins);
     }
 
@@ -44,7 +44,7 @@
     }
 
     .btn {
-        background: var(--primary-color);
+        background: var(--color-primary);
         padding: 0.6rem 1.5rem;
         color: var(--white);
         border-radius: 5px;
