--- a/components/shared/sliderCustomArrows/sliderCustomArrows.module.scss
+++ b/components/shared/sliderCustomArrows/sliderCustomArrows.module.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
 
     svg {
-        color: var(--primary-color);
+        color: var(--color-primary);
     }
     @media (max-width: 600px) {
         width: 30px;
