--- a/components/landingPage/heroSection/heroSection.module.scss
+++ b/components/landingPage/heroSection/heroSection.module.scss
@@ -22,21 +22,23 @@
     // gap: 3rem;
     display: flex;
     gap: 2rem;
-    padding-top: 5rem;
+    padding-top: 4.5rem;
     padding-bottom: 5rem;
+    // border: 2px solid red;
 }
 
 .hero_left {
     width: 60%;
 
     .hero_title {
-        font-weight: 700;
-        color: var(--primary-color);
+        font-weight: 600;
+        color: var(--color-primary);
         // font-family: Poppins-Regular;
         font-family: var(--font-poppins);
         font-size: 3.4rem;
         // max-width: 600px;
         line-height: 1.2;
+        // border: 2px solid blue;
 
         @media (max-width: 1250px) {
             >br {
@@ -48,8 +50,9 @@
     .benefits {
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
-        margin: 2rem 0;
+        gap: .5rem;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
 
         >div {
             display: flex;
@@ -57,19 +60,19 @@
             gap: 1rem;
 
             .check_icon {
-                width: 30px;
-                min-width: 30px;
-                min-height: 30px;
-                height: 30px;
-                background: var(--primary-color);
+                width: 25px;
+                min-width: 25px;
+                min-height: 25px;
+                height: 25px;
+                background: var(--color-primary);
                 border-radius: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
 
                 >svg {
-                    width: 20px;
-                    height: 20px;
+                    width: 18px;
+                    height: 18px;
                     color: var(--white);
                 }
             }
@@ -81,15 +84,15 @@
         }
     }
 
-    .hero_btn {
-        background: var(--primary-color);
-        padding: 0.8rem 2.5rem;
-        color: var(--white);
-        border-radius: 2rem;
-        font-family: var(--font-poppins);
-        text-align: center;
-        text-wrap: wrap;
-    }
+    // .hero_btn {
+    //     background: var(--color-primary);
+    //     padding: 0.8rem 2.5rem;
+    //     color: var(--white);
+    //     border-radius: 2rem;
+    //     font-family: var(--font-poppins);
+    //     text-align: center;
+    //     text-wrap: wrap;
+    // }
 
     .small_text {
         display: block;
@@ -205,6 +208,7 @@
     .hero {
         position: relative;
         margin-bottom: 20rem;
+        padding-top: 3.5rem;
     }
 
     .hero_left {
@@ -311,7 +315,7 @@
         .video {
             width: 70px;
             height: 70px;
-            background: var(--primary-color);
+            background: var(--color-primary);
             border: none;
             box-shadow: none;
             border-radius: 100%;
