--- a/components/landingPage/howItWorks/howItWorks.module.scss
+++ b/components/landingPage/howItWorks/howItWorks.module.scss
@@ -49,7 +49,7 @@
     .card_title {
         font-weight: 600;
         text-align: center;
-        color: var(--primary-color);
+        color: var(--color-primary);
         // font-family: Poppins-Regular;
         font-family: var(--font-poppins);
         white-space: nowrap;
@@ -61,7 +61,7 @@
     }
 
     >svg {
-        color: var(--primary-color);
+        color: var(--color-primary);
         width: 30px;
         height: 30px;
         position: absolute;
