--- a/components/landingPage/mapSection/mapSection.module.scss
+++ b/components/landingPage/mapSection/mapSection.module.scss
@@ -420,7 +420,7 @@
 
     // padding: 0.5rem;
     .title {
-        color: var(--primary-color);
+        color: var(--color-primary);
     }
 
     .descrption {
