--- a/components/landingPage/testimonials/slides/slides.module.scss
+++ b/components/landingPage/testimonials/slides/slides.module.scss
@@ -55,7 +55,7 @@
         >svg {
             width: 30px;
             height: 30px;
-            color: var(--primary-color);
+            color: var(--color-primary);
         }
     }
 }
