--- a/components/landingPage/testimonials/testimonials.module.scss
+++ b/components/landingPage/testimonials/testimonials.module.scss
@@ -60,7 +60,7 @@
     }
 
     .card_title {
-        color: var(--primary-color);
+        color: var(--color-primary);
         font-family: var(--font-poppins);
     }
 
@@ -88,7 +88,7 @@
     .card_heading {
         font-weight: 600;
         text-align: center;
-        color: var(--primary-color);
+        color: var(--color-primary);
         font-family: var(--font-poppins);
     }
 }
