--- a/components/shared/Advantages/advantages.module.scss
+++ b/components/shared/Advantages/advantages.module.scss
@@ -62,7 +62,7 @@
     .card_title {
         font-weight: 600;
         text-align: center;
-        color: var(--primary-color);
+        color: var(--color-primary);
         // font-family: Poppins-Regular;
         font-family: var(--font-poppins);
         white-space: nowrap;
