--- a/components/shared/aboutUs/aboutUs.module.scss
+++ b/components/shared/aboutUs/aboutUs.module.scss
@@ -39,7 +39,7 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        background: var(--primary-color);
+        background: var(--color-primary);
         z-index: 99;
         width: 70px;
         height: 70px;
@@ -117,7 +117,7 @@
             .name {
                 text-align: right;
                 margin-right: 15%;
-                color: var(--primary-color);
+                color: var(--color-primary);
                 margin-top: 0.5rem;
             }
 
