--- a/components/shared/navbar/navbar.module.scss
+++ b/components/shared/navbar/navbar.module.scss
@@ -14,11 +14,28 @@
 
 .navlink {
     color: var(--text-secondary);
+    font-weight: 500;
+    position: relative;
+}
+.navlink.active_link{
+    color: var(--color-primary);
+    &::after{
+        content: '';
+        width: 8px;
+        height: 8px;
+        background-color: var(--color-primary);
+        border-radius: 100%;
+        position: absolute;
+        left: 50%;
+        top: 100%;
+        transform: translateX(-50%);
+    }
 }
 
 .logo {
     >a {
         color: var(--black);
+        font-weight: 600;
     }
 
     margin: 0 3rem;
