--- a/components/landingPage/testimonials/slides/slides.module.scss
+++ b/components/landingPage/testimonials/slides/slides.module.scss
@@ -14,7 +14,6 @@
 }
 
 .tetimonial {
-
     .description {
         text-align: center;
         color: var(--text-primary);
@@ -24,14 +23,18 @@
         -webkit-box-orient: vertical;
         text-overflow: ellipsis;
         margin-top: 3rem;
-        font-weight: 500;
+        // font-weight: 500;
+        font-size: 1.3rem;
+        line-height: 1.3;
+        color: var(--color-primary);
     }
 
     .name {
         margin-top: 3rem;
         margin-bottom: 0.5rem;
         text-align: center;
-        font-weight: 500;
+        // font-weight: 500;
+        font-size: 1.3rem;
     }
 
     .date {
@@ -61,21 +64,39 @@
 }
 
 @media (max-width: 900px) {
-    .testimonials {
+    // .testimonials {
 
-        // margin-top: 1rem;
-        .description {
-            -webkit-line-clamp: 6;
-            margin-top: 2rem;
-        }
+    //     // margin-top: 1rem;
+    //     .description {
+    //         -webkit-line-clamp: 6;
+    //         margin-top: 2rem;
+    //     }
 
-        .name {
-            margin-top: 2rem;
-        }
-    }
+    //     .name {
+    //         margin-top: 2rem;
+    //     }
+    // }
 
     .arrows {
-        margin-top: 2rem;
+        margin-top: 3rem;
         gap: 5rem;
+    }
+}
+@media (max-width: 400px) {
+    .tetimonial{
+        .description{
+            font-weight: 500;
+        }
+        .name{
+            font-size: 1.2rem;
+        }
+    }
+    .arrows {
+        margin-top: 2rem;
+    }
+}
+@media (max-width: 300px) {
+    .arrows {
+        margin-top: 0.5rem;
     }
 }
