--- a/components/shared/SectionHeading/sectionHeading.module.scss
+++ b/components/shared/SectionHeading/sectionHeading.module.scss
@@ -5,9 +5,42 @@
     color: var(--color-primary);
     // font-family: Poppins-Regular;
     font-family: var(--font-poppins);
+
     @media (max-width: 400px) {
-        >bg{
+        >bg {
             display: none;
         }
     }
+}
+
+.heading_large {
+    font-weight: 600;
+    color: var(--color-primary);
+    font-family: var(--font-poppins);
+    font-size: 3.4rem;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 1.2rem;
+
+    @media (max-width: 600px) {
+        font-size: 2rem;
+        max-width: 100%;
+        // white-space: wrap;
+        // text-wrap: wrap;
+    }
+
+    @media (max-width: 320px) {
+        font-size: 1.8rem;
+    }
+
+    @media (max-width: 280px) {
+        font-size: 1.6rem;
+    }
+}
+
+.small_heading {
+    font-weight: 600;
+    text-align: center;
+    color: var(--color-primary);
+    font-family: var(--font-poppins);
 }
