--- a/components/how-it-works/faq/faq.module.scss
+++ b/components/how-it-works/faq/faq.module.scss
@@ -20,6 +20,11 @@
 
 .alight_left {
     text-align: left !important;
+    @media (max-width: 450px) {
+        >br{
+            display: none;
+        }
+    }
 }
 
 .faqs {
@@ -51,6 +56,8 @@
 
     >svg {
         transition: all 0.5s ease-in-out;
+        width: 25px;
+        min-width: 25px;
     }
 }
 
