--- a/components/landingPage/mapSection/mapSection.module.scss
+++ b/components/landingPage/mapSection/mapSection.module.scss
@@ -50,7 +50,7 @@
     }
 }
 
-.location.map1 {
+.location.location1 {
     top: 0.8rem;
     left: 47.5%;
     transform: translateX(-50%);
@@ -63,7 +63,7 @@
     }
 }
 
-.location.map2 {
+.location.location2 {
     top: 7.7rem;
     left: 33.1%;
     transform: translateX(-50%);
@@ -75,7 +75,7 @@
         margin-left: 5px;
     }
 }
-.location.map3 {
+.location.location3 {
     bottom: 5rem;
     left: 52%;
     width: 95px;
@@ -87,186 +87,186 @@
 }
 
 @media (min-width: 1350px) {
-    .location.map2 {
+    .location.location2 {
         left: 33.5%;
     }
 }
 @media (min-width: 1450px) {
-    .location.map2 {
+    .location.location2 {
         left: 35%;
     }
 }
 @media (min-width: 1550px) {
-    .location.map2 {
+    .location.location2 {
         top: 8rem;
         left: 36%;
     }
 }
 @media (min-width: 1650px) {
 
-    .location.map2 {
+    .location.location2 {
         left: 37%;
     }
 }
 @media (min-width: 1700px) {
-    .location.map2 {
+    .location.location2 {
         left: 36.7%;
     }
 }
 @media (min-width: 1750px) {
-    .location.map2 {
+    .location.location2 {
         left: 37.5%;
     }
-    .location.map3 {
+    .location.location3 {
         left: 51%;
     }
 }
 @media (min-width: 1850px) {
 
-    .location.map2 {
+    .location.location2 {
         left: 39%;
     }
 }
 @media (min-width: 1950px) {
-    .location.map2 {
+    .location.location2 {
         left: 39%;
     }
 }
 @media (min-width: 2050px) {
-    .location.map2 {
+    .location.location2 {
         left: 41.5%;
     }
-    .location.map3 {
+    .location.location3 {
         left: 50.2%;
     }
 }
 @media (min-width: 3000px) {
-    .location.map2 {
+    .location.location2 {
         left: 44.5%;
     }
 }
 @media (min-width: 5000px) {
 
-    .location.map2 {
+    .location.location2 {
         left: 46%;
     }
 }
 @media (max-width: 1300px) {
-    .location.map1 {
+    .location.location1 {
         left: 46%;
     }
 
-    .location.map2 {
+    .location.location2 {
         left: 32%;
     }
 }
 @media (max-width: 1200px) {
-    .location.map1 {
+    .location.location1 {
         left: 45%;
     }
 
-    .location.map2 {
+    .location.location2 {
         left: 30%;
     }
 }
 @media (max-width: 1100px) {
-    .location.map1 {
+    .location.location1 {
         left: 44%;
     }
 
-    .location.map2 {
+    .location.location2 {
         left: 29%;
     }
 }
 @media (max-width: 1000px) {
-    .location.map2 {
+    .location.location2 {
         left: 26%;
     }
 }
 @media (max-width: 900px) {
-    .location.map2 {
+    .location.location2 {
         left: 24%;
     }
 }
 @media (max-width: 820px) {
-    .location.map2 {
+    .location.location2 {
         left: 22%;
     }
 }
 @media (max-width: 780px) {
-    .location.map2 {
+    .location.location2 {
         left: 20%;
     }
 }
 @media (max-width: 720px) {
-    .location.map1 {
+    .location.location1 {
         left: 42%;
     }
-    .location.map2 {
+    .location.location2 {
         left: 17%;
     }
 }
 @media (max-width: 660px) {
-    .location.map2 {
+    .location.location2 {
         left: 14%;
     }
-    .location.map3 {
+    .location.location3 {
         // bottom: 5rem;
         left: 53%;
     }
 }
 @media (max-width: 620px) {
-    .location.map1 {
+    .location.location1 {
         left: 40%;
     }
-    .location.map2 {
+    .location.location2 {
         left: 12%;
     }
 }
 @media (max-width: 600px) {
-    .location.map1 {
+    .location.location1 {
         top: 1.5rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 8.5rem;
     }
 }
 @media (max-width: 550px) {
-    .location.map1 {
+    .location.location1 {
         top: 2.5rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 9.5rem;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 5.5rem;
         // left: 53%;
     }
 }
 @media (max-width: 500px) {
-    .location.map1 {
+    .location.location1 {
         top: 3.5rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 10rem;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 6rem;
         left: 51%;
     }
 }
 @media (max-width: 450px) {
-    .location.map1 {
+    .location.location1 {
         top: 4.5rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 10.5rem;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 6.5rem;
         left: 50%;
     }
@@ -275,18 +275,18 @@
     .heading_wrapper{
         margin-bottom: 0;
     }
-    .location.map1 {
+    .location.location1 {
         top: 6rem;
         width: 90px;
         height: 90px;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 12rem;
         width: 75px;
         height: 75px;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 7rem;
         left: 51%;
         width: 75px;
@@ -297,7 +297,7 @@
     .heading_wrapper{
         margin-bottom: -3rem;
     }
-    .location.map1 {
+    .location.location1 {
         top: 8rem;
         width: 80px;
         height: 80px;
@@ -308,12 +308,12 @@
             height: 10px;
         }
     }
-    .location.map2 {
+    .location.location2 {
         top: 13rem;
         width: 65px;
         height: 65px;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 7.5rem;
         left: 52%;
         width: 65px;
@@ -327,18 +327,18 @@
     .card_img_container{
         height: 500px;
     }
-    .location.map1 {
+    .location.location1 {
         top: 9.5rem;
         width: 70px;
         height: 70px;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 14rem;
         width: 55px;
         height: 55px;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 5.5rem;
         // left: 52%;
         width: 55px;
@@ -349,14 +349,14 @@
     .heading_wrapper{
         margin-bottom: -6rem;
     }
-    .location.map1 {
+    .location.location1 {
         top: 10rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 15rem;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 6rem;
         // left: 52%;
         // width: 55px;
@@ -367,14 +367,14 @@
     .heading_wrapper{
         margin-bottom: -7rem;
     }
-    .location.map1 {
+    .location.location1 {
         top: 10.5rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 15.3rem;
     }
-    .location.map3 {
+    .location.location3 {
         bottom: 6.2rem;
         left: 51%;
         // width: 55px;
@@ -385,11 +385,11 @@
     .heading_wrapper{
         margin-bottom: -8rem;
     }
-    .location.map1 {
+    .location.location1 {
         top: 11rem;
     }
     
-    .location.map2 {
+    .location.location2 {
         top: 15.3rem;
     }
 }
