--- a/components/get-offers/getOffers.module.scss
+++ b/components/get-offers/getOffers.module.scss
@@ -7,6 +7,9 @@
     text-align: left;
     margin: 4rem auto 5rem auto;
 }
+.get_offers_container.green_border{
+    border-color: var(--color-primary);
+}
 
 .heading {
     font-weight: 600 !important;
