--- a/components/about-us/locationSection/locationSection.module.scss
+++ b/components/about-us/locationSection/locationSection.module.scss
@@ -34,7 +34,7 @@
 
     .description {
         color: var(--text-primary);
-        max-width: 400px;
+        max-width: 410px;
     }
 
     .card {
@@ -53,6 +53,9 @@
 
         .small_heading {
             font-size: 1.3rem;
+            >a{
+                color: var(--color-primary);
+            }
         }
     }
 
@@ -62,10 +65,10 @@
         align-items: center;
         max-width: 400px;
 
-        .contact_btn {
-            padding-left: 4rem;
-            padding-right: 4rem;
-        }
+        // .contact_btn {
+        //     padding-left: 4rem;
+        //     padding-right: 4rem;
+        // }
     }
 }
 
@@ -286,6 +289,14 @@
         width: 100%;
         padding-right: 5%;
         max-width: 100%;
+        .heading{
+            text-align: center;
+        }
+        .description{
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+        }
 
         .card {
             width: 100%;
@@ -490,6 +501,11 @@
 
     .location.location3 {
         left: 57%;
+    }
+    .column1{
+        .hero_btn{
+            padding: 0.5rem 1.5rem;
+        }
     }
 }
 
