--- a/components/get-offers/getOffers.module.scss
+++ b/components/get-offers/getOffers.module.scss
@@ -75,6 +75,8 @@
             content: '';
             width: 15px;
             height: 15px;
+            min-width: 15px;
+            min-height: 15px;
             border: 3px solid #a3afbf;
             border-radius: 100%;
         }
@@ -85,8 +87,21 @@
 
         &::before {
             border: 3px solid var(--color-primary);
+            background-color: var(--color-primary);
         }
     }
+}
+
+.text_input{
+    padding: 0.3rem 0;
+    width: 100%;
+    height: 100%;
+    color: var(--text-primary);
+    font-weight: 500;
+    border: none;
+    outline: none;
+    background: transparent;
+    border-bottom: 1px solid #d6d6d6;
 }
 
 .step_6_option {
