--- a/components/landingPage/mapSection/mapSection.module.scss
+++ b/components/landingPage/mapSection/mapSection.module.scss
@@ -1,4 +1,3 @@
-
 .heading_wrapper {
     width: 90%;
     margin-left: auto;
@@ -51,15 +50,16 @@
 }
 
 .location.location1 {
-    top: 0.8rem;
-    left: 47.5%;
+    top: 21%;
+    left: 41.5%;
     transform: translateX(-50%);
     width: 110px;
     height: 110px;
     transition: all 0.3s ease;
-    &:hover{
+
+    &:hover {
         scale: 1.1;
-        margin-left: 4px;
+        margin-left: 5px;
     }
 }
 
@@ -70,327 +70,451 @@
     width: 95px;
     height: 95px;
     transition: all 0.3s ease;
-    &:hover{
+
+    &:hover {
         scale: 1.1;
-        margin-left: 5px;
+        margin-left: 4px;
     }
 }
+
 .location.location3 {
-    bottom: 5rem;
-    left: 52%;
+    bottom: 3rem;
+    left: 54%;
     width: 95px;
     height: 95px;
     transition: all 0.3s ease;
-    &:hover{
+
+    &:hover {
         scale: 1.1;
     }
 }
 
 @media (min-width: 1350px) {
+    // .location.location1 {
+    //     // top: 22%;
+    //     left: 42.2%;
+    // }
     .location.location2 {
         left: 33.5%;
     }
 }
+
 @media (min-width: 1450px) {
+    .location.location1 {
+        // top: 22%;
+        left: 43%;
+    }
     .location.location2 {
         left: 35%;
     }
 }
+
 @media (min-width: 1550px) {
+    .location.location1 {
+        // top: 22%;
+        left: 43.5%;
+    }
     .location.location2 {
         top: 8rem;
         left: 36%;
     }
 }
-@media (min-width: 1650px) {
 
+@media (min-width: 1650px) {
+    .location.location1 {
+        // top: 22%;
+        left: 40%;
+    }
     .location.location2 {
         left: 37%;
     }
 }
+
 @media (min-width: 1700px) {
+    .location.location1 {
+        // top: 22%;
+        left: 43.2%;
+    }
     .location.location2 {
         left: 36.7%;
     }
 }
+
 @media (min-width: 1750px) {
+    .location.location1 {
+        // top: 22%;
+        left: 43.5%;
+    }
     .location.location2 {
         left: 37.5%;
     }
+
     .location.location3 {
-        left: 51%;
+        left: 53%;
     }
 }
+
 @media (min-width: 1850px) {
 
     .location.location2 {
         left: 39%;
     }
 }
+
 @media (min-width: 1950px) {
+    .location.location1 {
+        // top: 22%;
+        left: 44.5%;
+    }
     .location.location2 {
         left: 39%;
     }
 }
+
 @media (min-width: 2050px) {
+    .location.location1 {
+        // top: 22%;
+        left: 45.8%;
+    }
     .location.location2 {
         left: 41.5%;
     }
+
     .location.location3 {
-        left: 50.2%;
+        left: 52.2%;
     }
 }
+
 @media (min-width: 3000px) {
+    .location.location1 {
+        // top: 22%;
+        left: 47.2%;
+    }
     .location.location2 {
         left: 44.5%;
     }
 }
-@media (min-width: 5000px) {
 
+@media (min-width: 5000px) {
+    .location.location1 {
+        // top: 22%;
+        left: 47.9%;
+    }
     .location.location2 {
         left: 46%;
     }
 }
+
 @media (max-width: 1300px) {
     .location.location1 {
-        left: 46%;
+        // top: 21%;
+        left: 41%;
     }
 
     .location.location2 {
         left: 32%;
     }
 }
+
 @media (max-width: 1200px) {
     .location.location1 {
-        left: 45%;
+        left: 40%;
     }
 
     .location.location2 {
         left: 30%;
     }
 }
+
 @media (max-width: 1100px) {
     .location.location1 {
-        left: 44%;
+        left: 39%;
     }
 
     .location.location2 {
         left: 29%;
     }
 }
+
 @media (max-width: 1000px) {
+    .location.location1 {
+        left: 38%;
+    }
     .location.location2 {
         left: 26%;
     }
 }
+
 @media (max-width: 900px) {
+    .location.location1 {
+        left: 37%;
+    }
     .location.location2 {
         left: 24%;
     }
 }
+
 @media (max-width: 820px) {
+    .location.location1 {
+        left: 35%;
+    }
     .location.location2 {
         left: 22%;
     }
 }
+
 @media (max-width: 780px) {
+    .location.location1 {
+        left: 34%;
+    }
     .location.location2 {
         left: 20%;
     }
 }
+
 @media (max-width: 720px) {
     .location.location1 {
-        left: 42%;
+        left: 33.5%;
     }
+
     .location.location2 {
         left: 17%;
     }
 }
+
 @media (max-width: 660px) {
+    .location.location1 {
+        left: 32%;
+    }
     .location.location2 {
         left: 14%;
     }
+
     .location.location3 {
         // bottom: 5rem;
-        left: 53%;
+        left: 58%;
     }
 }
+
 @media (max-width: 620px) {
     .location.location1 {
-        left: 40%;
+        left: 31%;
     }
+
     .location.location2 {
         left: 12%;
     }
 }
+
 @media (max-width: 600px) {
     .location.location1 {
-        top: 1.5rem;
+        top: 22%;
+        left: 30.5%;
     }
-    
+
     .location.location2 {
         top: 8.5rem;
     }
 }
+
 @media (max-width: 550px) {
     .location.location1 {
-        top: 2.5rem;
+        top: 23.5%;
+        // left: 30%;
     }
-    
+
     .location.location2 {
         top: 9.5rem;
     }
+
     .location.location3 {
-        bottom: 5.5rem;
-        // left: 53%;
+        bottom: 4rem;
+        left: 56%;
     }
 }
+
 @media (max-width: 500px) {
     .location.location1 {
-        top: 3.5rem;
+        top: 25%;
+        // left: 30%;
     }
-    
+
     .location.location2 {
         top: 10rem;
     }
+
     .location.location3 {
-        bottom: 6rem;
-        left: 51%;
+        bottom: 4.5rem;
+        left: 55%;
     }
 }
+
 @media (max-width: 450px) {
     .location.location1 {
-        top: 4.5rem;
+        top: 26.5%;
+        // left: 30%;
     }
-    
+
     .location.location2 {
         top: 10.5rem;
     }
+
     .location.location3 {
-        bottom: 6.5rem;
-        left: 50%;
+        bottom: 5.5rem;
+        left: 55%;
     }
 }
+
 @media (max-width: 420px) {
-    .heading_wrapper{
+    .heading_wrapper {
         margin-bottom: 0;
     }
+
     .location.location1 {
-        top: 6rem;
+        top: 31.5%;
+        // left: 30%;
         width: 90px;
         height: 90px;
     }
-    
+
     .location.location2 {
         top: 12rem;
         width: 75px;
         height: 75px;
     }
+
     .location.location3 {
-        bottom: 7rem;
-        left: 51%;
+        bottom: 6rem;
+        left: 55%;
         width: 75px;
         height: 75px;
     }
 }
+
 @media (max-width: 390px) {
-    .heading_wrapper{
+    .heading_wrapper {
         margin-bottom: -3rem;
     }
+
     .location.location1 {
-        top: 8rem;
+        top: 35%;
+        // left: 30%;
         width: 80px;
         height: 80px;
     }
-    .location{
+
+    .location {
         &::after {
             width: 10px;
             height: 10px;
         }
     }
+
     .location.location2 {
         top: 13rem;
         width: 65px;
         height: 65px;
     }
+
     .location.location3 {
-        bottom: 7.5rem;
-        left: 52%;
+        bottom: 6.6rem;
+        left: 57%;
         width: 65px;
         height: 65px;
     }
 }
+
 @media (max-width: 340px) {
-    .heading_wrapper{
+    .heading_wrapper {
         margin-bottom: -5rem;
     }
-    .card_img_container{
+
+    .card_img_container {
         height: 500px;
     }
+
     .location.location1 {
-        top: 9.5rem;
+        top: 42%;
+        // left: 30%;
         width: 70px;
         height: 70px;
     }
-    
+
     .location.location2 {
         top: 14rem;
         width: 55px;
         height: 55px;
     }
+
     .location.location3 {
-        bottom: 5.5rem;
+        bottom: 4.5rem;
         // left: 52%;
         width: 55px;
         height: 55px;
     }
 }
+
 @media (max-width: 310px) {
-    .heading_wrapper{
+    .heading_wrapper {
         margin-bottom: -6rem;
     }
+
     .location.location1 {
-        top: 10rem;
+        top: 43%;
+        // left: 30%;
     }
-    
+
     .location.location2 {
         top: 15rem;
     }
-    .location.location3 {
-        bottom: 6rem;
-        // left: 52%;
-        // width: 55px;
-        // height: 55px;
-    }
+
+    // .location.location3 {
+    //     bottom: 6rem;
+    //     // left: 52%;
+    //     // width: 55px;
+    //     // height: 55px;
+    // }
 }
+
 @media (max-width: 290px) {
-    .heading_wrapper{
+    .heading_wrapper {
         margin-bottom: -7rem;
     }
-    .location.location1 {
-        top: 10.5rem;
-    }
-    
+
+    // .location.location1 {
+    //     top: 44%;
+    //     // left: 30%;
+    // }
+
     .location.location2 {
         top: 15.3rem;
     }
+
     .location.location3 {
-        bottom: 6.2rem;
-        left: 51%;
+        bottom: 5.2rem;
+        left: 56%;
         // width: 55px;
         // height: 55px;
     }
 }
+
 @media (max-width: 260px) {
-    .heading_wrapper{
+    .heading_wrapper {
         margin-bottom: -8rem;
     }
+
     .location.location1 {
-        top: 11rem;
+        top: 44.5%;
+        // left: 30%;
     }
-    
+
     .location.location2 {
         top: 15.3rem;
+    }
+
+    .location.location3 {
+        bottom: 5.8rem;
+        // left: 56%;
     }
 }
 
@@ -403,6 +527,7 @@
     max-width: 230px;
     animation: fadeIn 1s ease forwards;
 }
+
 @keyframes fadeIn {
     from {
         opacity: 0 !important;
