--- a/components/shared/navbar/navbar.module.scss
+++ b/components/shared/navbar/navbar.module.scss
@@ -16,20 +16,24 @@
     color: var(--text-secondary);
     font-weight: 500;
     position: relative;
+    transition: all 0.3s;
+    &:hover{
+        color: var(--color-primary);
+    }
 }
 .navlink.active_link{
     color: var(--color-primary);
-    &::after{
-        content: '';
-        width: 8px;
-        height: 8px;
-        background-color: var(--color-primary);
-        border-radius: 100%;
-        position: absolute;
-        left: 50%;
-        top: 100%;
-        transform: translateX(-50%);
-    }
+    // &::after{
+    //     content: '';
+    //     width: 8px;
+    //     height: 8px;
+    //     background-color: var(--color-primary);
+    //     border-radius: 100%;
+    //     position: absolute;
+    //     left: 50%;
+    //     top: 100%;
+    //     transform: translateX(-50%);
+    // }
 }
 
 .logo {
